src/tests/testfiles/function-declarations/1.txt
testfiles/function-declarations/1.c:3:1: error: function declaration parameters don't match previous declaration
 int f(int a, float b);
 ^
